Update css h3 color

--- a/css/style.css
+++ b/css/style.css
@@ -791,7 +791,7 @@ h6 {
 .section-heading h3 {
     font-size: 14px;
     font-weight: bold;
-    color: #ccc;
+    color: #a9a9a9;
     letter-spacing: 2px;
     padding-bottom: 0;
 }
